fix: try test failure (this should fail!)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     command: npm run test
     environment:
       - REDIS_HOST=redis
+      - FAIL=true
     depends_on:
       - redis
   redis:
