--- a/node-js/templates/deployment.yaml
+++ b/node-js/templates/deployment.yaml
@@ -28,8 +28,16 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
+          env:
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: redis
+                  key: redis-password
+            - name: REDIS_HOST
+              value: redis
           livenessProbe:
             httpGet:
               path: /healthcheck
