--- a/charts/node-js/Chart.yaml
+++ b/charts/node-js/Chart.yaml
@@ -1,11 +1,11 @@
 name: node-js
-version: 0.0.4
+version: 0.0.7
 description: Event-driven I/O server-side JavaScript environment based on V8
 keywords:
  - node
  - javascript
  - nodejs
 maintainers:
-- name: RTL
-  email: niels.krijger@rtl.nl
+- name: Niels
+  email: niels@kryger.nl
 engine: gotpl
