ci: deploy using helm upgrade

--- a/codefresh.yml
+++ b/codefresh.yml
@@ -20,17 +20,26 @@ steps:
     candidate: '${{build_step}}'
     tag: '${{CF_BRANCH_TAG_NORMALIZED}}'
     registry: codefresh
-  deploy:
-    title: Running Deploy Script
-    type: deploy
-    kind: kubernetes
-    cluster: cluster-1@metrix-io
-    namespace: default
-    when:
-      branch:
-        only:
-          - master
-    service: test-service
-    candidate:
-      image: '${{build_step}}'
-      registry: codefresh
+  # deploy:
+  #   title: Running Deploy Script
+  #   type: deploy
+  #   kind: kubernetes
+  #   cluster: cluster-1@metrix-io
+  #   namespace: default
+  #   when:
+  #     branch:
+  #       only:
+  #         - master
+  #   service: test-service
+  #   candidate:
+  #     image: '${{build_step}}'
+  #     registry: codefresh
+  deploy_helm:
+    title: Helm Upgrade
+    image: 'codefresh/plugin-helm:2.8.0'
+    environment:
+      - CHART_NAME=node-js
+      - RELEASE_NAME=nodejs-test
+      - KUBE_CONTEXT=cluster-1@metrix-io
+      - NAMESPACE=development
+      - CHART_REPO_URL=s3://codefresh-charts/
