--- a/codefresh.yml
+++ b/codefresh.yml
@@ -38,7 +38,7 @@ steps:
     title: Helm Upgrade
     image: 'codefresh/plugin-helm:2.8.0'
     environment:
-      - CHART_NAME=node-js
+      - CHART_NAME=node-js-0.0.7
       - RELEASE_NAME=nodejs-test
       - KUBE_CONTEXT=cluster-1@metrix-io
       - NAMESPACE=development
