--- a/codefresh.yml
+++ b/codefresh.yml
@@ -47,3 +47,5 @@ steps:
       - RELEASE_NAME=nodejs-test
       - KUBE_CONTEXT=cluster-1@metrix-io
       - NAMESPACE=default
+      - DEBUG_CHART=true
+      - CHART_REPO_URL=s3://codefresh-charts/
